[package]
name = "dshackle-archive"
version = "0.4.0-dev"
edition = "2021"
license = "Apache-2.0"
description = "Extract blockchain data in JSON format and archive it as Avro files for offline processing"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["fs"] }
tokio-retry = "0.3"
tonic = "0.9"
async-trait = "0.1"
ginepro = "0.6"
pulsar = "6.3"
apache-avro = { version = "0.17", features = ["snappy"] }
apache-avro-derive = "0.17"
emerald-api = { git = "https://github.com/emeraldpay/emerald-api-rs", features = ["client-blockchain"] }
enum-display-derive = "0.1"
futures-util = "0.3.28"
lazy_static = "1.4.0"
chrono = "0.4"
alloy = { version = "0.9", features = ["rpc-types"] }
hex = "0.4.3"
num-traits = "0.2"
typed-path = "0.8"
shutdown = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3.19"
anyhow = "1.0"
thiserror = "2.0"
regex = "1.11"
object_store = { version = "0.11", features = ["aws"] }
bytes = "1.9"
url = "2.5"
