[package]
name = "dshackle-archive"
version = "0.4.0-dev"
edition = "2021"
license = "Apache-2.0"
description = "Extract blockchain data in JSON format and archive it as Avro files for offline processing"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["fs"] }
tokio-retry2 = { version = "0.5", features = ["jitter"] }
tokio-util = { version = "0.7" , features = ["io", "io-util"] }
tonic = { version = "0.12", features = ["tls"] }
futures = "0.3"
async-trait = "0.1"
ginepro = "0.8"
pulsar = "6.3"
apache-avro = { version = "0.17", features = ["snappy"] }
emerald-api = { git = "https://github.com/emeraldpay/emerald-api-rs", features = ["client-blockchain"] }
enum-display-derive = "0.1"
futures-util = "0.3"
lazy_static = "1.4.0"
chrono = "0.4"
alloy = { version = "0.9", features = ["rpc-types"] }
hex = "0.4.3"
num-traits = "0.2"
typed-path = "0.8"
shutdown = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "2.0"
regex = "1.11"
object_store = { version = "0.12", features = ["aws"] }
bytes = "1.9"
url = "2.5"
rustls-platform-verifier = "0.5"


[dev-dependencies]
testcontainers = "0.23"
