[package]
name = "dshackle-archive"
version = "0.6.0-dev"
edition = "2024"
license = "Apache-2.0"
description = "Extract blockchain data in JSON format and archive it as Avro files for offline processing"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "rt-multi-thread", "macros"] }
tokio-retry2 = { version = "0.6", features = ["jitter"] }
tokio-util = { version = "0.7" , features = ["io", "io-util"] }
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }
futures = "0.3"
async-trait = "0.1"
#ginepro = "0.9"
ginepro = { git = "https://github.com/dmarteau/ginepro", branch = "tonic-0.14-support"}
pulsar = "6.4"
apache-avro = { version = "0.20", features = ["snappy", "zstandard"] }
emerald-api = { git = "https://github.com/emeraldpay/emerald-api-rs", features = ["client-blockchain"] }
enum-display-derive = "0.1"
futures-util = "0.3"
lazy_static = "1.5"
chrono = "0.4"
alloy = { version = "1.0", features = ["rpc-types"] }
hex = "0.4.3"
shutdown = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "2.0"
regex = "1.12"
object_store = { version = "0.12", features = ["aws"] }
bytes = "1.10"
url = "2.5"
rustls-platform-verifier = "0.6"
shadow-rs = { version = "1.4", default-features = false }
itertools = "0.14"

[build-dependencies]
shadow-rs = "1.4"

[dev-dependencies]
testcontainers = "0.25"
rand = "0.9"
